--- a/src/app/components/announcement/announcement.component.html
+++ b/src/app/components/announcement/announcement.component.html
@@ -1,23 +1,26 @@
-<div class="announcement-container card" *ngIf="!isHidden">
-    <div class="card-header d-flex justify-content-between align-items-center">
+<div class="announcement-container card">
+    <div class="card-header d-flex justify-content-between align-items-center" >
       <div>
         <i class="fas fa-info-circle me-2"></i>Información Importante
       </div>
-      <button class="btn-close" (click)="hideAnnouncement()" title="Cerrar">
+      <button class="btn-close" (click)="hideAnnouncement()" title="Abrir" *ngIf="!isHidden">
         <i>Cerrar</i>
       </button>
+      <button class="btn-close" (click)="nohideAnnouncement()" title="Cerrar" *ngIf="isHidden">
+        <i>Abrir</i>
+      </button>
     </div>
-    <div class="card-body">
+    <div class="card-body" *ngIf="!isHidden">
       <div class="announcement-content">
         <div class="alert alert-info">
           <h4><i class="fas fa-exclamation-triangle me-2"></i>A nuestros queridos usuarios:</h4>
-          <p>Lamentamos los inconvenientes presentados este lunes 8/sep/2025 cuando el sistema experimentó dificultades debido a la abrumadora cantidad de usuarios que quisieron utilizar nuestra plataforma simultáneamente.</p>
+          <p>-Una cancion es eliminada automaticamente al completar <strong>10 Dislikes </strong></p>
           
-          <p>Nos complace informar que hemos realizado una <strong>migración completa de nuestra infraestructura</strong> para poder soportar una mayor cantidad de usuarios votando simultáneamente por sus canciones preferidas.</p>
+          <p>-Solo se puede votar una vez por cancion </p>
           
-          <p>Esta plataforma está diseñada para <strong>sugerir canciones</strong> que serán reproducidas en el restaurante universitario. El administrador tiene la potestad de evaluar cada sugerencia y decidir si es apropiada para el momento o ambiente.</p>
+          <p>-El administrador tiene la potestad de evaluar cada sugerencia y decidir si es apropiada para el momento o ambiente.</p>
           
-          <p>Agradecemos enormemente su entusiasmo y participación. ¡Sigan votando por su música favorita!</p>
+          <p><strong>Agradecemos enormemente su entusiasmo y participación. ¡Sigan votando por su música favorita!</strong></p>
         </div>
         
         <div class="developer-info">
@@ -26,8 +29,7 @@
               <i class="fas fa-laptop-code text-primary"></i>
             </div>
             <div>
-              <p class="mb-1">Desarrollado por <b>Sebastian Vega</b>:</p>
-              <h6 class="mb-2">Estudiante de Ingeniería de Sistemas - UPTC Sogamoso 2025-II</h6>
+              <p class="mb-1">Desarrollado por <b href="https://www.instagram.com/sebastian.vegar/">Sebastian Vega</b>:</p>
               <div class="social-links">
                 <a href="https://github.com/SebastianVega4" target="_blank">
                   <i class="fab fa-github me-1"></i>GitHub
