--- a/src/app/app.html
+++ b/src/app/app.html
@@ -27,7 +27,7 @@
 
 <footer class="now-playing-bar">
   <div class="footer-content text-center">
-    <p class="footer-text mb-0">Desarrollado por una sola persona:</p>
+    <p class="footer-text mb-0">Desarrollado por:</p>
     <p class="footer-text mb-1">Estudiante de Ingeniería de Sistemas - UPTC Sogamoso 2025-II</p>
     <div class="social-links">
       <a href="https://github.com/SebastianVega4" target="_blank">
