--- a/src/app/components/announcement/announcement.component.html
+++ b/src/app/components/announcement/announcement.component.html
@@ -15,8 +15,12 @@
         <div class="alert alert-info">
           <h4><i class="fas fa-exclamation-triangle me-2"></i>A nuestros queridos usuarios:</h4>
           <p>-Una cancion es eliminada automaticamente al completar <strong>10 Dislikes </strong></p>
-          
+
+          <p>-Cancion que entre en reproducion se eliminara automaticamente</p>
+
           <p>-Solo se puede votar una vez por cancion </p>
+
+          <p>-Cada semana se eliminaran todas las caciones del ranking </p>
           
           <p>-El administrador tiene la potestad de evaluar cada sugerencia y decidir si es apropiada para el momento o ambiente.</p>
           
