--- a/src/app/components/admin-panel/admin-panel.html
+++ b/src/app/components/admin-panel/admin-panel.html
@@ -137,6 +137,11 @@
 <div class="card mb-4">
   <div class="card-header">
     <h5 class="mb-0">Configuración de Spotify</h5>
+    <div class="update-button-container">
+      <button class="btn btn-icon" (click)="getAdminCurrentlyPlaying()" title="Actualizar">
+        <i class="fas fa-sync-alt"></i>
+      </button>
+    </div>
   </div>
   <div class="card-body">
     <div *ngIf="spotifyStatus">
