--- a/src/app/components/announcement/announcement.component.html
+++ b/src/app/components/announcement/announcement.component.html
@@ -16,15 +16,17 @@
           <h4><i class="fas fa-exclamation-triangle me-2"></i>A nuestros queridos usuarios:</h4>
           <p>-Una cancion es eliminada automaticamente al completar <strong>10 Dislikes </strong></p>
 
-          <p>-Cancion que entre en reproducion se eliminara automaticamente</p>
+          <p>-Cancion que entre en reproducion se eliminara automaticamente del Ranking</p>
 
           <p>-Solo se puede votar una vez por cancion </p>
 
-          <p>-Cada semana se eliminaran todas las caciones del ranking </p>
+          <p>-Cada semana se eliminaran todas las caciones del Ranking </p>
           
           <p>-El administrador tiene la potestad de evaluar cada sugerencia y decidir si es apropiada para el momento o ambiente.</p>
           
           <p><strong>Agradecemos enormemente su entusiasmo y participación. ¡Sigan votando por su música favorita!</strong></p>
+
+          <p><strong> UPTC Music - V2.1 </strong></p>
         </div>
         
         <div class="developer-info">
