--- a/src/app/components/announcement/announcement.component.html
+++ b/src/app/components/announcement/announcement.component.html
@@ -20,7 +20,7 @@
 
           <p>-Solo se puede votar una vez por cancion </p>
 
-          <p>-Cada semana se eliminaran todas las caciones del Ranking </p>
+          <p>-Cada semana se eliminaran todas las canciones del Ranking </p>
           
           <p>-El administrador tiene la potestad de evaluar cada sugerencia y decidir si es apropiada para el momento o ambiente.</p>
           
