--- a/src/app/app.html
+++ b/src/app/app.html
@@ -11,6 +11,9 @@
         <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
           <i class="fas fa-home me-1"></i>Inicio
         </a>
+        <a routerLink="/ranking" routerLinkActive="active">
+          <i class="fas fa-trophy me-1"></i>Ranking
+        </a>
         <a routerLink="/admin-login" routerLinkActive="active">
           <i class="fas fa-lock me-1"></i>Admin
         </a>
